--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,10 +1,8 @@
 {
+  "buildCommand": "npm run build",
   "functions": {
     "app/api/**/*.ts": {
       "maxDuration": 30
     }
-  },
-  "env": {
-    "MONGODB_URI": "@mongodb_uri"
   }
 }
