--- a/package.json
+++ b/package.json
@@ -6,30 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "seed-inventory": "tsx scripts/seed-inventory.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0",
-    "mongodb": "^6.3.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "mongodb": "^6.3.0",
+    "lucide-react": "^0.294.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
-    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.6.0",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0"
   }
 }
