--- a/src/vercel.json
+++ b/src/vercel.json
@@ -4,5 +4,6 @@
       "maxDuration": 30
     }
   },
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
